[package]
name = "waypoint"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#std = { default-features = false, features=[ "panic_immediate_abort" ] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'
#debug = false